@startuml

class Contract{
   -int id
   -Date date
   -double insuranceSum
   -int typeInsurance
   -double tariffRate
   -int idClient
   -int idEmployee
   -int status
   -int idConfirmedAccountant
}

class ProfileWindow{
   +void LogoutButtonClicked()
   +void CancelButtonClicked()
}

class  LoginWindow{
   -Database db
   -void LoginButtonClicked()
   +void LoginSuccessful()
}

class ContractRenegotiateWindow{
   -Contract currentContract
   -Database db
   +void UpdataComments()
   +void ClearUi()
   +void BackButtonClicked()
   +void SendButtonClicked()
}

class AgentStatisticsModel{
   +void UpdateModel()
   -void ResetSorting()
}

class AbstractWindowForRole{
   +ProfileWindow profile
   +SidePanel messagePanel
   +void ShowMessage()
   +void Logout()
}

class WindowNavigator{
   -AbstractWindowForRole WindowForRole
   -LoginWindow loginWindow
   -Database db
   -void CreateAndShowLoginWindow()
   -void HideAndRemoveLoginWindow()
   -void HideAndRemoveRoleWindow()
   +void LoginSuccessful()
   +void Logout()
}

class Database {
   +void CreateTables()
   +Contract GetContractById()
   +User GetUserById()
   +bool ChangeContract()
   +bool UserVerify()
   +bool AddUser()
   +bool AddContract()
   +bool ChangeUser()
   +bool ConfirmationContract()
   +bool RenegotiateContract()
}


class AgentWindow{
   -Database db
   -ContractRenegotiateWindow renegotiateWindow
   -AgentStatisticModel statisticModel
   -TableView viewStatistic
   -TableView viewRenegotiateContract
   -ContractRenegotiateWindow renegotiateWidget
   +void ShowViewRenegotiate()
   +void ShowRenegotiateWidget()
   +void UpdateViewRenegotiate()
   -void DoubleClikedOnViewrenegotiate()
   -void RenegotiateWidgetBackButtonClicked()
   -void RenegotiateWidgetSendButtonClicked()
   -void ConcludeContractButtonClicked()
   -void HeaderInStatisticWidgetClicked()
}


AbstractWindowForRole <|-- AgentWindow
AgentWindow o-l- Database
WindowNavigator o-- Database
WindowNavigator -r-> AbstractWindowForRole
WindowNavigator -l-> LoginWindow
AgentWindow --> ContractRenegotiateWindow
AgentWindow --> AgentStatisticsModel
AbstractWindowForRole -r-> ProfileWindow

ContractRenegotiateWindow --> Contract
ContractRenegotiateWindow o-- Database

LoginWindow o-- Database
@enduml